...

    <Button
        android:id="@+id/backButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
...

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
...

            <ImageView
                android:id="@+id/myProfilPicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
...

            <TextView
                android:id="@+id/profilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/profilPseudo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/profilEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilNom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilVille"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilPostal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/titleRegister4"
                android:textAlignment="center"
                android:textColor="@color/white"
...

                    <TextView
                        android:id="@+id/profilFacebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilTwitter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilYoutube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilPinterest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilInstagram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilSnapchat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilTwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/profilTiktok"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/profilSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
